// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`client/messaging/common-message-layout/TextMessage > message as a normal text 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-jvDgNt jfqicU"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-ikrMhg iRLQJB sc-hjIEjD cGTiYu"
      tabindex="0"
    >
      <span
        class="sc-bRBteW kFvymL"
      >
        <i
          aria-hidden="true"
          class="sc-jhbick fENxjz"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-jhbick fENxjz"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-gHmoSK kRelkX sc-cVdwKd kHdooS"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-djMJHV upVlS"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-jhbick fENxjz"
    >
      : 
    </i>
    <span
      class="sc-kIBtVG heMaNB"
    >
      This is test message
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message mixing emoji and text renders them inline-sized 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-jvDgNt jfqicU"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-ikrMhg iRLQJB sc-hjIEjD cGTiYu"
      tabindex="0"
    >
      <span
        class="sc-bRBteW kFvymL"
      >
        <i
          aria-hidden="true"
          class="sc-jhbick fENxjz"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-jhbick fENxjz"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-gHmoSK kRelkX sc-cVdwKd kHdooS"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-djMJHV upVlS"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-jhbick fENxjz"
    >
      : 
    </i>
    <span
      class="sc-kIBtVG heMaNB"
    >
      nice game 
      <span
        class="sc-bGxLfG fVtgOC"
      >
        🔥
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a link 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-jvDgNt jfqicU"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-ikrMhg iRLQJB sc-hjIEjD cGTiYu"
      tabindex="0"
    >
      <span
        class="sc-bRBteW kFvymL"
      >
        <i
          aria-hidden="true"
          class="sc-jhbick fENxjz"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-jhbick fENxjz"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-gHmoSK kRelkX sc-cVdwKd kHdooS"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-djMJHV upVlS"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-jhbick fENxjz"
    >
      : 
    </i>
    <span
      class="sc-kIBtVG heMaNB"
    >
      here is a link 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a link before a mention 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-jvDgNt jfqicU"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-ikrMhg iRLQJB sc-hjIEjD cGTiYu"
      tabindex="0"
    >
      <span
        class="sc-bRBteW kFvymL"
      >
        <i
          aria-hidden="true"
          class="sc-jhbick fENxjz"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-jhbick fENxjz"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-gHmoSK kRelkX sc-cVdwKd kHdooS"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-djMJHV upVlS"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-jhbick fENxjz"
    >
      : 
    </i>
    <span
      class="sc-kIBtVG heMaNB"
    >
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
       go here
       
      <span
        class="sc-gHmoSK kRelkX sc-kubIlH dmKybX"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-djMJHV upVlS"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a link between mentions 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-jvDgNt jfqicU"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-ikrMhg iRLQJB sc-hjIEjD cGTiYu"
      tabindex="0"
    >
      <span
        class="sc-bRBteW kFvymL"
      >
        <i
          aria-hidden="true"
          class="sc-jhbick fENxjz"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-jhbick fENxjz"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-gHmoSK kRelkX sc-cVdwKd kHdooS"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-djMJHV upVlS"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-jhbick fENxjz"
    >
      : 
    </i>
    <span
      class="sc-kIBtVG heMaNB"
    >
      hey
       
      <span
        class="sc-gHmoSK kRelkX sc-kubIlH dmKybX"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-djMJHV upVlS"
        >
                     
        </span>
      </span>
       see 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
       go here
       
      <span
        class="sc-gHmoSK kRelkX sc-kubIlH dmKybX"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-djMJHV upVlS"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-jvDgNt jfqicU"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-ikrMhg iRLQJB sc-hjIEjD cGTiYu"
      tabindex="0"
    >
      <span
        class="sc-bRBteW kFvymL"
      >
        <i
          aria-hidden="true"
          class="sc-jhbick fENxjz"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-jhbick fENxjz"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-gHmoSK kRelkX sc-cVdwKd kHdooS"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-djMJHV upVlS"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-jhbick fENxjz"
    >
      : 
    </i>
    <span
      class="sc-kIBtVG heMaNB"
    >
      hey
       
      <span
        class="sc-gHmoSK kRelkX sc-kubIlH dmKybX"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-djMJHV upVlS"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention before a link 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-jvDgNt jfqicU"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-ikrMhg iRLQJB sc-hjIEjD cGTiYu"
      tabindex="0"
    >
      <span
        class="sc-bRBteW kFvymL"
      >
        <i
          aria-hidden="true"
          class="sc-jhbick fENxjz"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-jhbick fENxjz"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-gHmoSK kRelkX sc-cVdwKd kHdooS"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-djMJHV upVlS"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-jhbick fENxjz"
    >
      : 
    </i>
    <span
      class="sc-kIBtVG heMaNB"
    >
      <span
        class="sc-gHmoSK kRelkX sc-kubIlH dmKybX"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-djMJHV upVlS"
        >
                     
        </span>
      </span>
       go to 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention between links 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-jvDgNt jfqicU"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-ikrMhg iRLQJB sc-hjIEjD cGTiYu"
      tabindex="0"
    >
      <span
        class="sc-bRBteW kFvymL"
      >
        <i
          aria-hidden="true"
          class="sc-jhbick fENxjz"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-jhbick fENxjz"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-gHmoSK kRelkX sc-cVdwKd kHdooS"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-djMJHV upVlS"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-jhbick fENxjz"
    >
      : 
    </i>
    <span
      class="sc-kIBtVG heMaNB"
    >
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
       go here
       
      <span
        class="sc-gHmoSK kRelkX sc-kubIlH dmKybX"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-djMJHV upVlS"
        >
                     
        </span>
      </span>
       or here 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention of self user 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-jvDgNt TFjef"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-ikrMhg iRLQJB sc-hjIEjD cGTiYu"
      tabindex="0"
    >
      <span
        class="sc-bRBteW kFvymL"
      >
        <i
          aria-hidden="true"
          class="sc-jhbick fENxjz"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-jhbick fENxjz"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-gHmoSK kRelkX sc-cVdwKd kHdooS"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-djMJHV upVlS"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-jhbick fENxjz"
    >
      : 
    </i>
    <span
      class="sc-kIBtVG heMaNB"
    >
      Hey
       
      <span
        class="sc-gHmoSK kRelkX sc-kubIlH dmKybX"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-djMJHV upVlS"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with only emoji renders them jumbo-sized 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-jvDgNt jfqicU"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-ikrMhg iRLQJB sc-hjIEjD cGTiYu"
      tabindex="0"
    >
      <span
        class="sc-bRBteW kFvymL"
      >
        <i
          aria-hidden="true"
          class="sc-jhbick fENxjz"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-jhbick fENxjz"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-gHmoSK kRelkX sc-cVdwKd kHdooS"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-djMJHV upVlS"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-jhbick fENxjz"
    >
      : 
    </i>
    <span
      class="sc-kIBtVG heMaNB"
    >
      <span
        class="sc-bGxLfG gtOLJR"
      >
        🔥🔥
      </span>
       
      <span
        class="sc-bGxLfG gtOLJR"
      >
        🎉
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with too many emoji for jumbo stays inline-sized 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-jvDgNt jfqicU"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-ikrMhg iRLQJB sc-hjIEjD cGTiYu"
      tabindex="0"
    >
      <span
        class="sc-bRBteW kFvymL"
      >
        <i
          aria-hidden="true"
          class="sc-jhbick fENxjz"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-jhbick fENxjz"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-gHmoSK kRelkX sc-cVdwKd kHdooS"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-djMJHV upVlS"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-jhbick fENxjz"
    >
      : 
    </i>
    <span
      class="sc-kIBtVG heMaNB"
    >
      <span
        class="sc-bGxLfG fVtgOC"
      >
        😀😀😀😀😀😀😀😀😀😀😀
      </span>
    </span>
  </div>
</div>
`;
